#####################################################################################
# Package includes
#####################################################################################


#####################################################################################
# Add executable
#####################################################################################
add_executable(lvr2_example_coordinates
    Main.cpp
)

target_link_libraries(lvr2_example_coordinates
    lvr2_static
)
