cmake_minimum_required(VERSION 3.4)

# set include dirs
set(QVTK_PATCHED_INSTALL_INCLUDE_DIR ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_INCLUDEDIR}/lvr2/ext/QVTKOpenGLWidget CACHE PATH "patch directory of QVTKOpenGLWidget header.")
find_path(QVTK_PATCHED_INCLUDE_DIR QVTKOpenGLWidget.h PATH .)
find_path(QVTK_PATCHED_INCLUDE_DIR QVTKOpenGLNativeWidget.h PATH .)

mark_as_advanced(QVTK_PATCHED_INCLUDE_DIR QVTK_PATCHED_INSTALL_INCLUDE_DIR)

install(DIRECTORY . 
  DESTINATION ${QVTK_PATCHED_INSTALL_INCLUDE_DIR}
  FILES_MATCHING PATTERN "*.h")
